# ros2_em_tracking

./: .gitmodules  CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py  version.txt
.github/workflows/: ci.yaml
docker/: Dockerfile  install.sh
em_tracking_py/: em_calibration_stepper_node.py  localization_node.py  measurement_node.py  measurement_node_cal.py  signal_test.py
emns_utils/: magnetic_system.py  magnetic_tracking.py  readme.md  requirements.txt
include/: utility.h
launch/: calibration.xml  localization.xml  mdriver.xml  mdriver_test.xml  pickup.xml  signal_test.xml
mdriver_py/: current_listener.py  driver_test.py  gui.py  mdriver_field_gui.py  mdriver_fieldgrad_gui.py  mdriver_gui.py  mdriver_node.py
msg/: Status.msg  TnbMnsStatus.msg
other/: pickup_calibration.dwf3work
rviz/: em_tracking_config.rviz
src/: errstrs.c  mdriver_node.cpp  mdriver_node_test.cpp  pickup_node.cpp  tnb_mns_driver_node.cpp  tnb_mns_driver_node_test.cpp
srv/: Enable.srv  StateTransition.srv  TNBMNSStateTransition.srv
