<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
    Tesla - A ROS-based framework for performing magnetic manipulation

    Copyright 2018 Multi Scale Robotics Lab

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<package format="3">
  <name>mdriver</name>
  <version>1.0.0</version>
  <description>TNB MNS Driver</description>

  <maintainer email="dvarx@ethz.ch">Denis von Arx</maintainer>

  <license>Apache License 2.0</license>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rclcpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages>mdriver</rosidl_interface_packages>
  </export>
</package>
