<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mdriver</name>
  <version>1.0.0</version>
  <description>MDriver package contains the ROS2 drivers for interfacing with the MDriver hardware</description>

  <maintainer email="dvarx@ethz.ch">Denis von Arx</maintainer>

  <license>Apache License 2.0</license>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages>mdriver</rosidl_interface_packages>
  </export>
</package>
